<resources>
    <string name="app_name">SmashPE</string>

    <!-- Main activity -->
    <string name="welcome">Welcome to the SmashPE app!</string>
    <string name="instructions">Enter your Challonge API Key to start</string>
    <string name="logo_description">Smash PE logo</string>
    <string name="external_url_description">External URL logo</string>
    <string name="challonge_api_key">Challonge API Key</string>
    <string name="validate_button">Validate key</string>
    <string name="help">Find your API Key</string>
    <string name="api_key_error">This API Key could not be validated. Please, try again.</string>
    <string name="api_key_success">API Key validated successfully!</string>

    <!-- Menu activity -->
    <string name="tournaments">Tournaments</string>
    <string name="settings">Settings</string>

    <!-- Tournaments -->
    <string name="status_icon_description">Status icon</string>
    <string name="tournament_name_placeholder">Tournament name</string>
    <string name="tournament_count_placeholder">23 participants</string>
    <plurals name="tournament_participants_count">
        <item quantity="one">%d participant</item>
        <item quantity="other">%d participants</item>
    </plurals>
    <string name="tournament_date">• %s</string>

    <!-- Settings -->
    <string name="settings_reset">Reset Challonge API Key</string>
    <string name="reset_api_key_dialog">Are you sure you want to reset your API Key?</string>
    <string name="challonge_icon_description">Challonge icon</string>
    <string name="arrow_icon_description">Arrow icon</string>

    <!-- Matches -->
    <string name="title_activity_matches">Matches</string>
    <string name="matches_tab_1">Pending results</string>
    <string name="matches_tab_2">Past matches</string>
    <string name="participants_pending"><b>%s</b> x <b>%s</b></string>
    <string name="participants_finished"><b>%s</b> %s x %s <b>%s</b></string>
    <string name="match_updated_at">Last updated at %s</string>

    <!-- Report -->
    <string name="report_results_title">Report results</string>
    <string name="score_hint">0</string>
    <string name="submit_results_button">Submit results</string>
    <string name="submit_results_dialog">Do you wish to report <b>%s</b> as this match\'s winner?</string>

    <!-- States -->
    <string name="state_unknown">State unknown</string>
    <string name="state_group_stages_underway">Group stage</string>
    <string name="state_pending">Awaiting start</string>
    <string name="state_underway">In progress</string>
    <string name="state_complete">Finished</string>

    <!-- Dialog -->
    <string name="dialog_title">Attention!</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_deny">Cancel</string>

    <!-- Rounds -->
    <string name="round_grand_finals">Grand Finals</string>
    <string name="round_grand_finals_set_1">Grand Finals (Set 1)</string>
    <string name="round_grand_finals_set_2">Grand Finals (Set 2)</string>
    <string name="round_winners_finals">Winners | Finals</string>
    <string name="round_winners_semifinals">Winners | Semi-finals</string>
    <string name="round_losers_finals">Losers | Finals</string>
    <string name="round_losers_semifinals">Losers | Semi-finals</string>
    <string name="round_winners_generic">Winners | Round %s</string>
    <string name="round_losers_generic">Losers | Round %s</string>
    <string name="round_generic">Round %s</string>

    <!-- No results -->
    <string name="no_results_icon_description">No results icon</string>
    <string name="no_results_title">Nothing to see here…</string>
    <string name="no_results_description">We couldn\'t find anything</string>
</resources>