<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hcaula.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/smashpe_logo_cut" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/challonge_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/challonge_api_key"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/challonge_api_key"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/api_key_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/api_key_error"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/api_key_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/api_key_success"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/validate_button" />

        <LinearLayout
            android:id="@+id/external_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/external_url_description"
                app:srcCompat="@android:drawable/ic_menu_set_as"
                app:tint="@android:color/holo_blue_light" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>