<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants_finished"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:text="@string/round_grand_finals_set_1"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_updated_at"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

</LinearLayout>
