<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/settings_reset_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_list"
        android:gravity="center_vertical"
        android:padding="14dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/challonge_icon_description"
            app:srcCompat="@drawable/challonge_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:text="@string/settings_reset"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/arrow_icon_description"
            app:srcCompat="@drawable/ic_arrow"
            app:tint="@android:color/darker_gray" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>